SFDC_CI_DEMO/src/objects/Normal_User__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Employee_Details</relationshipLabel>
        <relationshipName>Employee_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>( TODAY()  -  dob__c  )  / 365</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Designation__c</fullName>
        <label>Designation</label>
        <picklist>
            <picklistValues>
                <fullName>SE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SSE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cosultant</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Employee_ID__c</fullName>
        <label>Employee_ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First_Name</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last_Name</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Employee_Details</relationshipLabel>
        <relationshipName>Employee_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Record_type_name__c</fullName>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record type name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Identifier__c</fullName>
        <label>Unique Identifier</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>dob__c</fullName>
        <label>dob</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Employee_Details</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Normal_User Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employee_Details</pluralLabel>
    <recordTypes>
        <fullName>ADMIN_RELATED</fullName>
        <active>true</active>
        <label>ADMIN RELATED</label>
    </recordTypes>
    <recordTypes>
        <fullName>TECHNICAL_RELATED</fullName>
        <active>true</active>
        <label>TECHNICAL RELATED</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>